# vkml

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/compute/: compute_manager.rs  mod.rs  optimisations.rs
src/gpu/: allocator.rs  gpu_memory.rs  mod.rs  pool.rs  slang_compiler.rs  vk_gpu.rs
src/gpu/extensions/: nv_coop_matrix2.rs  vk_extensions.rs
src/instruction/: gpu_operations.rs  mod.rs
src/instruction/add/: add.rs  add.slang  add_nostride.slang  mod.rs
src/instruction/concat/: concat.rs  mod.rs
src/instruction/conv/: conv.rs  conv_1d.slang  conv_2d.slang  conv_3d.slang  mod.rs
src/instruction/div/: div.rs  div.slang  mod.rs
src/instruction/expand/: expand.rs  expand.slang  mod.rs
src/instruction/gemm/: gemm.rs  gemm.slang  gemm_tiled.slang  gemm_tiled_16x16.slang  gemm_tiled_32x32.slang  gemm_tiled_8x8.slang  mod.rs
src/instruction/identity/: identity.rs
src/instruction/matmul/: matmul.rs  matmul_1d2d.slang  matmul_1d3d.slang  matmul_2d1d.slang  matmul_2d2d.slang  matmul_2d3d.slang  matmul_3d1d.slang  matmul_3d2d.slang  matmul_3d3d.slang  matmul_tiled.slang  matmul_tiled_16x16.slang  matmul_tiled_32x32.slang  matmul_tiled_8x8.slang  mod.rs
src/instruction/max/: max.rs  max.slang  mod.rs
src/instruction/maxpool/: maxpool.rs  maxpool_1d.slang  maxpool_2d.slang  maxpool_3d.slang  mod.rs
src/instruction/min/: min.rs  min.slang  mod.rs
src/instruction/mul/: mod.rs  mul.rs  mul.slang
src/instruction/reducemean/: mod.rs  reducemean.rs  reducemean.slang
src/instruction/relu/: mod.rs  relu.rs  relu.slang
src/instruction/reshape/: mod.rs
src/instruction/shape/: mod.rs  shape.rs  shape.slang
src/instruction/sigmoid/: mod.rs  sigmoid.rs  sigmoid.slang  sigmoid_fp16.slang  sigmoid_fp32.slang
src/instruction/softmax/: mod.rs  softmax.rs  softmax.slang  softmax_fp16.slang  softmax_fp32.slang  softmax_sga.slang
src/layer/: activations.rs  concat.rs  conv.rs  element_wise.rs  factory.rs  input_buffer.rs  linear.rs  mod.rs  reshape.rs
src/model/: graph_model.rs
src/scheduler/: execution_state.rs
src/slang/: compiler.rs  mod.rs  wrapper.rs
src/tensor/: mod.rs
src/tensor_graph/: mod.rs
src/utils/: dtype.rs  error.rs  mod.rs
tests/: test_fp16.rs  test_fp32.rs
tests/common/: mod.rs
tests/data/: mnist_conv_fp16.onnx  mnist_mlp_fp16.onnx  mnist_mlp_png_probs.onnx  multi_chain_add-10.onnx
(+4 files in other folders)
