[package]
name = "vkml"
version = "0.0.1"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "High-level Vulkan-based machine learning library"
readme = "README.md"
repository = "https://github.com/void-research/vkml"
keywords = ["vulkan", "machine-learning", "gpu", "compute", "ml"]
categories = ["science", "graphics", "hardware-support"]

[profile.release]
lto = true

[dependencies]
vulkanalia = { version = "0.35", features = ["libloading"] }
thiserror = "2"
sys-info = "0.9"
bytemuck = "1.23"
zero-pool = "0.8.0"
onnx-extractor = "0.3.5"
shader-slang = "0.1.0"
shader-slang-sys = "0.1.0"

#[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }